# pytest-pylembic

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: testing.yaml
src/pytest_pylembic/: plugin.py
tests/: conftest.py  test_plugin.py
